fixed the overflow bug

--- a/src/Components/CertificationSection/CertificationSection.css
+++ b/src/Components/CertificationSection/CertificationSection.css
@@ -2,6 +2,7 @@
     position: relative;
     margin: 5rem auto 0 auto;
     width: 100%;
+    overflow: hidden;
 }
 
 .certification-section .title-container{
