--- a/src/Components/ContactSection/ContactSection.css
+++ b/src/Components/ContactSection/ContactSection.css
@@ -1,5 +1,6 @@
 .contact-section {
     margin-top: 6rem;
+    overflow: hidden;
 }
 
 .contact-title {
