--- a/src/Components/EducationSection/EducationSection.css
+++ b/src/Components/EducationSection/EducationSection.css
@@ -1,6 +1,7 @@
 .education-section {
     margin-top: 5rem;
     position: relative;
+    overflow: hidden;
 }
 
 .education-title-container {
