--- a/src/Components/ExperienceSection/ExperienceSection.css
+++ b/src/Components/ExperienceSection/ExperienceSection.css
@@ -2,6 +2,7 @@
     margin-top: 5rem;
     position: relative;
     display: block;
+    overflow: hidden;
 }
 
 .experience-section .title-container{
